# backend/infrastructure/database/schema_models.go
@@ -35,13 +35,14 @@ func (Locker) TableName() string {
 }
 
 type Compartment struct {
-	ID            uuid.UUID  `gorm:"column:id;type:uuid;primaryKey"`
-	LockerID      uuid.UUID  `gorm:"column:locker_id;type:uuid;not null;index:idx_compartments_locker_id_size,priority:1;index:idx_compartments_locker_id_status,priority:1;uniqueIndex:uidx_compartment_locker_no,priority:1"`
-	CompartmentNo int        `gorm:"column:compartment_no;not null;uniqueIndex:uidx_compartment_locker_no,priority:2"`
-	Size          string     `gorm:"column:size;type:varchar(2);not null;index:idx_compartments_locker_id_size,priority:2"`
-	Status        string     `gorm:"column:status;type:varchar(20);not null;default:AVAILABLE;index:idx_compartments_locker_id_status,priority:2"`
-	CreatedAt     time.Time  `gorm:"column:created_at;type:timestamptz;not null"`
-	UpdatedAt     *time.Time `gorm:"column:updated_at;type:timestamptz"`
+	ID               uuid.UUID  `gorm:"column:id;type:uuid;primaryKey"`
+	LockerID         uuid.UUID  `gorm:"column:locker_id;type:uuid;not null;index:idx_compartments_locker_id_size,priority:1;index:idx_compartments_locker_id_status,priority:1;uniqueIndex:uidx_compartment_locker_no,priority:1"`
+	CompartmentNo    int        `gorm:"column:compartment_no;not null;uniqueIndex:uidx_compartment_locker_no,priority:2"`
+	Size             string     `gorm:"column:size;type:varchar(2);not null;index:idx_compartments_locker_id_size,priority:2"`
+	Status           string     `gorm:"column:status;type:varchar(20);not null;default:AVAILABLE;index:idx_compartments_locker_id_status,priority:2"`
+	OverdueFeePerDay int        `gorm:"column:overdue_fee_per_day;type:integer;not null;default:0"`
+	CreatedAt        time.Time  `gorm:"column:created_at;type:timestamptz;not null"`
+	UpdatedAt        *time.Time `gorm:"column:updated_at;type:timestamptz"`
 }
 
 func (Compartment) TableName() string {
